fix nav z-index

--- a/src/components/MainNavigation/MainNavigation.module.css
+++ b/src/components/MainNavigation/MainNavigation.module.css
@@ -1,6 +1,6 @@
 .header {
 	position: sticky;
-	z-index: 100000;
+	z-index: 1001;
 	top: 0px;
 	margin: 0;
 	padding: 2rem;
